Fixed css alignment

--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@
 }
 
 .bubble {
-	width: 250px;
-	margin: 25px;
+	width: 225px;
+	margin: 10px;
 	display: inline-block;
 }
 
@@ -13,6 +13,7 @@
 }
 
 .bubble > .img {
+	margin: auto;
 	width: 200px;
 	height: 200px;
 	background: 50% 50% no-repeat;
